--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 browser=google
+#Allure reports
+allure_results_folder = allure-results
+allure_screenshots_folder = allure-screenshots/
