fixed application context for test packages

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,4 @@ browser=google
 #Allure reports
 allure_results_folder = allure-results
 allure_screenshots_folder = allure-screenshots/
+logging.level.root: DEBUG
