--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ browser=google
 #Allure reports
 allure_results_folder = allure-results
 allure_screenshots_folder = allure-screenshots/
+logging.level.root: DEBUG
