--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,9 @@
 	<profiles>
 		<profile>
 			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
 				<activatedProperties>dev</activatedProperties>
 			</properties>
