configured screenshots to reports after each test to Extent Report file

--- a/src/main/resources/extent.properties
+++ b/src/main/resources/extent.properties
@@ -1,5 +1,5 @@
 extent.reporter.spark.start=true
 extent.reporter.spark.config=src/main/resources/extent.xml
-extent.reporter.spark.out=target/cucumber/report.html
-screenshot.dir=target/
-screenshot.rel.path=./
+extent.reporter.spark.out=target/cucumber/ExtentReport/report.html
+screenshot.dir=target/cucumber/ExtentReport/screenshots
+screenshot.rel.path=./screenshots/
